--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -709,5 +709,7 @@
     "apiKey-active": "Active",
     "apiKey-expired": "Expired",
     "apiKey-inactive": "Inactive",
-    "Expires": "Expires"
+    "Expires": "Expires",
+    "disableAPIKeyMsg": "Are you sure you want to disable this API key?",
+    "deleteAPIKeyMsg": "Are you sure you want to delete this API key?"
 }
